--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js -- --port 4000"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hannahNchan/apislackclone.git"
@@ -18,10 +19,12 @@
   },
   "homepage": "https://github.com/hannahNchan/apislackclone#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   }
 }
