--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon server.js -- --port 4000"
+    "start": "nodemon --exec babel-node server.js"
   },
   "type": "module",
   "repository": {
@@ -24,6 +24,9 @@
     "mongodb": "^6.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/node": "^7.23.9",
+    "@babel/preset-env": "^7.24.0",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.0"
   }
